--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.4",
+    "html2pdf.js": "^0.10.3",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
